# business-central-client

./: .gitignore  README.md  pyproject.toml
.github/workflows/: regenerate.yml
docs/: business-central-v2.contract.json  business-central-v2.ir.json
src/business_central_client/: __init__.py  __main__.py  auth.py  cli.py  client.py  config.py  errors.py  odata.py
src/business_central_client/generator/: __init__.py  contract.py  ir.py  models.py  names.py  scraper.py  sdk.py
tests/: test_client.py  test_contract.py  test_generated_resources.py  test_generator.py  test_scraper.py
tests/fixtures/: index.html  salesquote_get.html  salesquote_list.html
